# smpsc

./: Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
src/: lib.rs  mpsc.rs
src/oneshot/: mod.rs  sink.rs  stream.rs
tests/: sink.rs  sink_fanout.rs
