[package]
name = "smpsc"
version = "0.2.2"
edition = "2018"
authors = ["Adam Killam <adammkillam@gmail.com>"]
description = "Wrappers for tokio's mpsc channels which implement Stream and Sink."
license = "MIT"
repository = "https://github.com/amkillam/smpsc"
readme = "README.md"
keywords = ["tokio", "stream", "sink", "channel", "mpsc"]
categories = [
  "asynchronous",
  "network-programming",
  "no-std",
  "concurrency",
  "no-std",
]
homepage = "https://github.com/amkillam/smpsc"
documentation = "https://docs.rs/smpsc"
rust-version = "1.40.0"

[features]
default = ["alloc", "std"]
alloc = ["async-sink/alloc"]
std = ["async-sink/std", "alloc"]
time = ["tokio/time"]

[dependencies]
tokio-stream = { version = "^0.1.17", default-features = false, features = [
  "io-util",
] }
tokio = { version = "^1.15.0", default-features = false, features = ["sync"] }
async-sink = { version = "^0.3.1", default-features = false }

[dev-dependencies]
tokio-stream = { version = "^0.1.17", default-features = false, features = [
  "io-util",
] }
tokio = { version = "^1.15.0", default-features = false, features = [
  "io-util",
  "macros",
  "rt-multi-thread",
  "sync",
] }
futures-test = { version = "^0.3.28", default-features = false, features = [
  "std",
] }
futures-util = { version = "^0.3.28", default-features = false, features = [
  "std",
  "alloc",
] }
tokio-stream-util = { version = "^0.2.8", default-features = false, features = [
  "sink",
  "std",
  "alloc",
  "io",
] }
